bugfix: overlapping connect links on text on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,7 +304,7 @@ a >.blue-btn:hover{
 .top-header-span{
     height: 100px;
     border-radius: 20px;
-    font-size: 18px;
+    font-size: 16px;
     
 }
 
